fix responses navigation link

--- a/views/response.pug
+++ b/views/response.pug
@@ -7,7 +7,7 @@ body
 			- if (isAdmin)
 				a(href='/users') Пользователи
 			a(href='/forms') Формы
-			a.pre-active(href='/forms/' + id + '/responses') Ответы
+			a.pre-active(href='/forms/' + form_id + '/responses') Ответы
 			div.triangle.triangle-left
 			a.active Просмотр ответа
 			div.triangle.triangle-right
